--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color: #FFD700;
+    --primary-color: #BEEE11;
     --secondary-color: #000000;
-    --accent-color: #FFA500;
+    --accent-color: #b2ff59;
     --text-color: #FFFFFF;
     --gradient-start: rgba(0, 0, 0, 0.8);
     --gradient-end: rgba(0, 0, 0, 0.6);
